<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".avb.PlaceActivity"
    tools:showIn="@layout/activity_place">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/evaluate_place"
             style="@style/MainActionButton"
             android:id="@+id/evaluate_place"
             android:layout_weight="1"
             android:onClick="startEvaluationActivity"
             />

         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/see_statistics"
             android:id="@+id/see_statistics"
             android:layout_weight="1"
             android:onClick="startStatisticsActivity"
             style="@style/SecondaryActionButton"

              />
     </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/quality_index_label"
               style="@style/DefaultText"
               android:layout_weight="6"/>
           <View
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight=".5"/>

           <Button
               android:layout_width="1dp"
               android:layout_height="wrap_content"
               android:text="3,8"
               android:layout_weight="1"
               style="@style/TextButton"
               android:id="@+id/quality_index"
               />
       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/state_ranking_position_label"
                style="@style/DefaultText"
                android:layout_weight="6"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:src="@drawable/ic_menu_camera"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:text="20°"
                android:layout_weight="1"
                style="@style/TextButton"
                android:id="@+id/ranking_position"
                />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New Place!"
            android:id="@+id/new_place_button"
            android:onClick="startNewPlaceActivity"
            style="@style/SecondaryActionButton"
            />
        <ListView
            android:id="@+id/listview_place_info"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
